--- a/index.html
+++ b/index.html
@@ -29,15 +29,20 @@
         </header>
 
         <main>
-            <section class="prompt">
-                <p>what do you want to know?</p>
+            <section class="prompt" id="prompt">
+                
+                <img src="./assets/8(2).png" alt="magic 8 ball"/>
+                <h1>what do you want to know?</h1>
                 <input type="text" />
-                <button id="submit">Submit</button>
+                <button id="submit">Submit</button class="button">
             </section>
             <section id="fortune" class="fortune hide">
+                <div class="fortune-wrapper">
                 <img src="./assets/8(2).png" alt="magic 8 ball"/>
                 <p id="answer"></p>
                 <button id="reset">Ask again!</button>
+            </div>
+        </section>
         </main>
     </body>
 </html>
