few fixes on js

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                 
                 <img src="./assets/8(2).png" alt="magic 8 ball"/>
                 <h1>what do you want to know?</h1>
-                <input type="text" />
+                <input class="submit-input" type="text" />
                 <button id="submit">Submit</button class="button">
             </section>
             <section id="fortune" class="fortune hide">
                 <div class="fortune-wrapper">
                 <img src="./assets/8(2).png" alt="magic 8 ball"/>
                 <p id="answer"></p>
-                <button id="reset">Ask again!</button>
+                <button class="button" id="reset">Ask again!</button>
             </div>
         </section>
         </main>
